tests/NormalTests/paczka1/small_fuzzy/34203747.err
Error in line 1: QVtgg A228 12,1
Error in line 2: 32evFtIJ2 S86 69,3
Error in line 11: mgRyYAhHE S86 88,15
Error in line 7: 1J15wm3O A885 99,3
